w3auth/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
  name: web3auth-frontend
spec:
  ingressClassName: nginx
  rules:
  - host: w3auth.holaplex.tools
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web3auth-frontend
              port:
                number: 3000
  tls:
  - hosts:
    - w3auth.dev.holaplex.tools
    secretName: com-web3auth-frontend-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
  name: web3auth-backend
spec:
  ingressClassName: nginx
  rules:
  - host: campus-auth-server.dev.holaplex.tools
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web3auth-backend
              port:
                number: 3000
  tls:
  - hosts:
    - campus-auth-server.holaplex.tools
    secretName: com-api-web3auth-frontend-tls
